--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
      <div class="temp">
        <h2 class="section-title">Temperature</h2>
-       <p class="reading">High: -20C&deg;</p>
-       <p class="reading">Low: -120C&deg;</p>
+       <p class="reading">High: -20&deg;C</p>
+       <p class="reading">Low: -120&deg;C</p>
      </div>
 
      <div class="wind">
@@ -76,50 +76,50 @@
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
       <div class="previous-day">
         <h3 class="previous-day__sol"> Sol 371</h3>
         <p class="previous-day__date">November 16</p>
-        <p class="previous-day__temp"> High: -20C&deg;</p>
-        <p class="previous-day__temp">Low: -120C&deg;</p>
+        <p class="previous-day__temp"> High: -20&deg;C</p>
+        <p class="previous-day__temp">Low: -120&deg;C</p>
         <button class="previous-day__more-info">more info</button>
       </div>
    </div>
