updated back button for project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   
 </head>
 <body>
-   
+  <button id="goBack" onclick="window.location.href='https://qr-quest-gen.netlify.app/'">
+    Go Back
+</button>
    <main class="mars-current-weather">
      <h1 class="main-title">Latest weather at Elysium Planitia</h1>
 
